CHANGELOG

2015-09-21 3.8.1

    * fix: disable chunked encoding on empty body DELETE requests in Node.js

2015-09-01 3.8.0

    * test: node v4 is now the default testing env
    * fix: always send a unique response to the user
    * fix: use `lodash` by default, only use `lodash-compat` when building for the browser
    * feat: add client.addAlgoliaAgent() to augment the sent x-algolia-agent
    * chore: move all deps to ^version and add a shrinkwrap to allow reproducible builds

2015-09-01 3.7.8

    * fix: ignore $http.defaults.headers.common in angular build
    * fix: force distinct false in deleteByQuery search
    * docs: precise initialization option values

2015-08-27 3.7.7
    * fix: listen to socket errors in nodejs keepalive strategy

2015-08-24 3.7.6
    * fix: encodeURIComponent(cursor) in browseFrom()

2015-07-23 3.7.5
    * fix: withCredentials forced to false in Angular

2015-07-20 3.7.4
    * fix: JSON.stringify fix when Array.prototype.toJSON is defined (prototype.js < 1.7 bug)

2015-07-09 3.7.3
    * fix: make https over http proxy work

2015-07-08 3.7.2
    * fix: remove a git clone dependency on install (debug/ms/yui compressor issue)

2015-07-08 3.7.1
    * fix: do not call agent.destroy when there's no such method
    * fix: do not rely on any "smart" port computing

2015-06-18 3.7.0
    * feat: allow passing `httpAgent` option to the nodejs client
      allow more flexible proxy/keepAlive agents in some more complex environments

2015-06-18 3.6.3
    * fix: allow getting the debug log from the outside
      will be used by diag tool and possibly anyone aware of https://github.com/visionmedia/debug

2015-06-17 3.6.2
    * chore: add window.__algolia for easy debugging anywhere

2015-06-16 3.6.1
    * fix: parse cloud build fix
    * fix: YUI compressor fix
      fixes #113
    * test: automatic parse cloud build testing
    * fix: add application id to final error message ("Cannot connect to..")

2015-06-05 3.6.0